# MiraTTS-onnx

./: .gitignore  README.md  pyproject.toml
docs/: ONNX.md
examples/: generate_int4.py
mira/: codec.py  decoder.py  encoder.py  model.py  sampling.py  utils.py
scripts/: quantize_int4.py  test_cpu.py  test_gpu.py  test_onnx.py
